fix double scrollbar in trade page, z-index issue with modals, and overflow issue of chart and form

--- a/src/styles/trade.scss
+++ b/src/styles/trade.scss
@@ -1,17 +1,10 @@
 .trade_page {
-  padding: 20px;
   background-color: #0f0f0f;
   height: 100vh;
   display: flex;
-  flex-direction: row;
   align-items: flex-start;
-  padding: 10px 20px;
-  gap: 24px;
   background-color: #0f0f0f;
-  flex: none;
-  order: 1;
-  align-self: stretch;
-  flex-grow: 0;
+  width:100%;
 }
 
 #chart-container {
@@ -47,10 +40,11 @@
   }
 
   .order-form-modal {
-    background-color: $black;
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    background-color: rgba(0,0,0,0.5);
+    border: 1px solid rgba(255, 255, 255, 0.3);
     position: absolute;
-    right: 300px;
+    top:0;
+    right: 350px;
     button {
       width: 100%;
       background: none;
@@ -480,6 +474,7 @@ ul li:hover .slider p {
     position: absolute;
     left: 0;
     top: 50px;
+    background-color: $black;
   }
 
   #summary {
